Commit binaries for 0.0.107

--- a/.gitignore
+++ b/.gitignore
@@ -2,38 +2,22 @@
 *.sublime-project
 *.sublime-workspace
 *.swp
-.idea/*
-*.iml
 .DS_Store
 .svn
-bin/traceur-runtime.js
-bin/traceur.js
-bin/traceur.js.map
-bin/traceur-from-no-modules.js
-bin/traceur-es6-no-modules.js
-bin/BrowserSystem.js
-dist/
-build/es6-no-modules/
 build/compiled-by-previous-traceur.js
+build/currentSemVer.mk
+build/local.mk
 build/node
-build/npm-version-number
 build/previous-commit-traceur.js
 node_modules
 out
-src/codegeneration/ParseTreeTransformer.js
-src/outputgeneration/regexpuRewritePattern.js
-src/outputgeneration/SourceMapIntegration.js
-src/syntax/ParseTreeVisitor.js
-src/syntax/trees/ParseTreeType.js
-src/syntax/trees/ParseTrees.js
-src/loader/version.js
-test/unit/node/out/compile-amd
-test/unit/node/out/compile-cjs
-test/unit/node/out/compile-cjs-maps
+test/unit/codegeneration/PlaceholderParser.generated.js
+test/unit/tools/SourceMapMapping.generated.js
+test/unit/node/resources/compile-amd
+test/unit/node/resources/compile-cjs
 test/amd-compiled
 test/bench/esprima
 test/commonjs-compiled
 test/errsfile.json
 test/test-list.js
 test/wiki/CompilingOffline/out/*
-test/wiki/CompilingOffline/deepDirectory/dist/*
